# iotics-identity-py

./: .gitignore  .pylint.rc  CONTRIBUTING.md  LICENSE  README.md  flake8.cfg  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: iotics-identity-tag.yml  iotics-identity.yml  test.yml
how_to/: README.md  high_level_api.py  high_level_api_code_only.py  regular_api.py  regular_api_code_only.py
iotics/lib/: __init__.py
iotics/lib/identity/: __init__.py  const.py  error.py
iotics/lib/identity/api/: __init__.py  advanced_api.py  advanced_api_keys.py  advanced_api_proof.py  high_level_api.py  regular_api.py
iotics/lib/identity/crypto/: identity.py  issuer.py  jwt.py  key_pair_secrets.py  keys.py  proof.py
iotics/lib/identity/register/: document.py  document_builder.py  document_helper.py  key_pair.py  keys.py  resolver.py  rest_resolver.py
iotics/lib/identity/validation/: authentication.py  document.py  identity.py  proof.py
tests/behaviour/: common.py  test_advanced_identity.py  test_high_level_identity_api.py  test_identity.py
tests/behaviour/features/: advanced_identity_api.feature  high_level_identity_api.feature  identity_api.feature
tests/unit/iotics/: __init__.py
tests/unit/iotics/lib/identity/: conftest.py  fake.py  helper.py
tests/unit/iotics/lib/identity/api/: test_advanced_api.py  test_advanced_api_proof.py  test_high_level_api.py
tests/unit/iotics/lib/identity/crypto/: conftest.py  test_identity.py  test_issuer.py  test_jwt.py  test_key_pair_helpers.py  test_key_pair_validation.py  test_keys.py  test_proof.py
tests/unit/iotics/lib/identity/register/: conftest.py  test_document.py  test_document_builder.py  test_document_helper.py  test_keys.py  test_rest_resolver.py
tests/unit/iotics/lib/identity/validation/: helper.py  test_authentication.py  test_document.py  test_identifier.py  test_proof.py
