[tool:pytest]
testpaths = tests
addopts =
    -p no:warnings

[flake8]
exclude =
    env
    venv
    .tox
ignore =
# line break before binary operator (keeping W504: line break after binary operator)
    W503
max-line-length = 120
max-complexity = 15


[metadata]
name = iotics.lib.identity
description = Iotics DID specification Python library
long_description = file: README.md
long_description_content_type = text/markdown
author = Iotic Labs
author_email = info@iotic-labs.com
url = https://github.com/Iotic-Labs/iotic-web
python_requires = >=3.8


[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    requests>=2.22.0
    base58==2.1.0
    PyJWT==2.0.1
    mnemonic==0.19
    cryptography>=3.4.7,<4

[options.extras_require]
dev =
    tox==3.20.0
    twine==3.1.1

test =
    pytest==6.2.4
    pytest-bdd==4.0.2
    pytest-cov==2.11.1
    pytest-html==3.1.1
    requests-mock==1.9.2

lint =
    flake8==3.9.2
    pylint==2.8.2
    pylint-quotes==0.2.1
    mypy==0.812


[options.packages.find]
exclude =
    test*

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    iotics-identity-create-seed=iotics.lib.identity.api.advanced_api:AdvancedIdentityLocalApi.create_seed

