[tool:pytest]
testpaths = tests

[flake8]
exclude =
    env
    venv
    .tox
ignore =
# line break before binary operator (keeping W504: line break after binary operator)
    W503
max-line-length = 120
max-complexity = 15


[metadata]
name = iotics-identity
version = 1.0.2
description = Iotics DID specification Python library
long_description = file: README.md
long_description_content_type = text/markdown
author = Iotics
author_email = plateng@iotic-labs.com
license_file = LICENSE
platform = any

url = https://github.com/Iotic-Labs/iotics-identity-py
keywords = iotics, did, decentralised identity, decentralized identity, digital twin
python_requires = >=3.7
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/Iotic-Labs/iotics-identity-py/issues
    Changelog = https://github.com/Iotic-Labs/iotics-identity-py/releases

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    requests>=2.22.0
    base58==2.1.0
    PyJWT==2.0.1
    mnemonic==0.19
    cryptography>=3.4.7,<4

[options.extras_require]
dev =
    tox==3.20.0

test =
    pytest==6.2.4
    pytest-bdd==4.0.2
    pytest-cov==2.11.1
    pytest-html==3.1.1
    requests-mock==1.9.2

lint =
    flake8==3.9.2
    pylint==2.8.2
    pylint-quotes==0.2.1
    mypy==0.812


[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    iotics-identity-create-seed=iotics.lib.identity.api.advanced_api:AdvancedIdentityLocalApi.create_seed

