[tool:pytest]
testpaths = tests

[mypy]
strict_optional = false

[flake8]
exclude =
    env
    venv
    .tox
ignore =
# line break before binary operator (keeping W504: line break after binary operator)
    W503
max-line-length = 120
max-complexity = 15


[metadata]
name = iotics-identity
version = 2.1.1
description = Iotics DID specification Python library
long_description = file: README.md
long_description_content_type = text/markdown
author = Iotics
author_email = plateng@iotic-labs.com
license_file = LICENSE
platform = any

url = https://github.com/Iotic-Labs/iotics-identity-py
keywords = iotics, did, decentralised identity, decentralized identity, digital twin
python_requires = >=3.8
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/Iotic-Labs/iotics-identity-py/issues
    Changelog = https://github.com/Iotic-Labs/iotics-identity-py/releases

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    requests>=2.32.0
    base58==2.1.1
    PyJWT==2.7.0
    mnemonic==0.20
    cryptography>=42.0.8,<43

[options.extras_require]
dev =
    tox==4.6.4

test =
    pytest==7.4.0
    pytest-bdd==6.1.1
    pytest-cov==4.1.0
    pytest-html==3.2.0
    requests-mock==1.11.0

lint =
    flake8==6.0.0
    pylint==2.17.4
    pylint-quotes==0.2.3
    mypy==1.4.1
    types-requests


[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    iotics-identity-create-seed=iotics.lib.identity.api.advanced_api:AdvancedIdentityLocalApi.create_seed

